fix hasadna/datacity-k8s#205 round the border of homepage top header component on mobile

--- a/ckanext/datacity/fanstatic/datacity-theme.css
+++ b/ckanext/datacity/fanstatic/datacity-theme.css
@@ -21,7 +21,6 @@ body {
 @media (max-width: 768px) {
    .homepage .module-search .module-content .heading {
         width: 100%;
-        border-radius: initial;
         margin: 0;
         margin-bottom: 50px;
         padding: 0;
